--- a/index.html
+++ b/index.html
@@ -142,9 +142,12 @@
         <ul>
           <li>
             <a
-              href="https://goo.gl/maps/jRYS7xwpVxC2w3iY8" target="_blank" rel="nooppener noreferrer"
-              г. Киев, пр-т Леси Украинки, 26</a
+              href="https://goo.gl/maps/jRYS7xwpVxC2w3iY8"
+              target="_blank"
+              rel="nooppener noreferrer"
             >
+              г. Киев, пр-т Леси Украинки, 26
+            </a>
           </li>
           <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
           <li><a href="mailto:info@example.com">info@example.com </a></li>
