--- a/portfolio.html
+++ b/portfolio.html
@@ -22,5 +22,129 @@
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
+    <main>
+      <section>
+        <h1></h1>
+        <ul>
+          <li><button type="button">Все</button></li>
+          <li><button type="button">Веб-сайты</button></li>
+          <li><button type="button">Приложения</button></li>
+          <li><button type="button">Дизайн</button></li>
+          <li><button type="button">Маркетинг</button></li>
+        </ul>
+      </section>
+      <section>
+        <ul>
+          <li>
+            <img
+              src="./images/portfolio1.jpg"
+              alt="ноутбук с сайтом"
+              width="370"
+              height="294"
+            />
+            <h2>Технокряк</h2>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio2.jpg"
+              alt="баскетболисты"
+              width="370"
+              height="294"
+            />
+            <h2>Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio3.jpg"
+              alt="лого рыбного ресторана"
+              width="370"
+              height="294"
+            />
+            <h2>Ресторан <span lang="en">Seafood</span></h2>
+            <p>Приложение</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio4.jpg"
+              alt="наушники"
+              width="370"
+              height="294"
+            />
+            <h2>Проект <span lang="en">Prime</span></h2>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio5.jpg"
+              alt="две книги"
+              width="370"
+              height="294"
+            />
+            <h2>Проект <span lang="en">Boxes</span></h2>
+            <p>Приложение</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio6.jpg"
+              alt="экран компьютера"
+              width="370"
+              height="294"
+            />
+            <h2 lang="en">Inspiration has no Borders</h2>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio7.jpg"
+              alt="журнал"
+              width="370"
+              height="294"
+            />
+            <h2>Издание <span lang="en">Limited Edition</span></h2>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio8.jpg"
+              alt="журнал"
+              width="370"
+              height="294"
+            />
+            <h2>Проект LAB</h2>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio9.jpg"
+              alt="руки на клавиатуре"
+              width="370"
+              height="294"
+            />
+            <h2 lang="en">Growing Business</h2>
+            <p>Приложение</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <a href=""> WebStudio</a>
+      <address>
+        <ul>
+          <li>
+            <a
+              href="https://goo.gl/maps/jRYS7xwpVxC2w3iY8"
+              target="_blank"
+              rel="nooppener noreferrer"
+            >
+              г. Киев, пр-т Леси Украинки, 26
+            </a>
+          </li>
+          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+          <li><a href="mailto:info@example.com">info@example.com </a></li>
+        </ul>
+      </address>
+    </footer>
   </body>
 </html>
