adding font family

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link href="
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
+    "
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="page">
@@ -32,8 +40,7 @@
           <li><button type="button">Дизайн</button></li>
           <li><button type="button">Маркетинг</button></li>
         </ul>
-      </section>
-      <section>
+
         <ul>
           <li>
             <img
@@ -42,7 +49,7 @@
               width="370"
               height="294"
             />
-            <h2>Технокряк</h2>
+            <h3>Технокряк</h3>
             <p>Веб-сайт</p>
           </li>
           <li>
@@ -52,7 +59,7 @@
               width="370"
               height="294"
             />
-            <h2>Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+            <h3>Постер <span lang="en">New Orlean vs Golden Star</span></h3>
             <p>Дизайн</p>
           </li>
           <li>
@@ -62,7 +69,7 @@
               width="370"
               height="294"
             />
-            <h2>Ресторан <span lang="en">Seafood</span></h2>
+            <h3>Ресторан <span lang="en">Seafood</span></h3>
             <p>Приложение</p>
           </li>
           <li>
@@ -72,7 +79,7 @@
               width="370"
               height="294"
             />
-            <h2>Проект <span lang="en">Prime</span></h2>
+            <h3>Проект <span lang="en">Prime</span></h3>
             <p>Маркетинг</p>
           </li>
           <li>
@@ -82,7 +89,7 @@
               width="370"
               height="294"
             />
-            <h2>Проект <span lang="en">Boxes</span></h2>
+            <h3>Проект <span lang="en">Boxes</span></h3>
             <p>Приложение</p>
           </li>
           <li>
@@ -92,7 +99,7 @@
               width="370"
               height="294"
             />
-            <h2 lang="en">Inspiration has no Borders</h2>
+            <h3 lang="en">Inspiration has no Borders</h3>
             <p>Веб-сайт</p>
           </li>
           <li>
@@ -102,7 +109,7 @@
               width="370"
               height="294"
             />
-            <h2>Издание <span lang="en">Limited Edition</span></h2>
+            <h3>Издание <span lang="en">Limited Edition</span></h3>
             <p>Дизайн</p>
           </li>
           <li>
@@ -112,7 +119,7 @@
               width="370"
               height="294"
             />
-            <h2>Проект LAB</h2>
+            <h3>Проект LAB</h3>
             <p>Маркетинг</p>
           </li>
           <li>
@@ -122,7 +129,7 @@
               width="370"
               height="294"
             />
-            <h2 lang="en">Growing Business</h2>
+            <h3 lang="en">Growing Business</h3>
             <p>Приложение</p>
           </li>
         </ul>
