--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="page">
@@ -29,7 +33,7 @@
       </section>
       <section>
         <h2></h2>
-        <ul class="features">
+        <ul class="features list">
           <li>
             <h3 class="features-title">Внимание к деталям</h3>
             <p class="features-text">
@@ -38,21 +42,21 @@
             </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
+            <h3 class="features-title">Пунктуальность</h3>
             <p class="features-text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
+            <h3 class="features-title">Планирование</h3>
             <p class="features-text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
+            <h3 class="features-title">Современные технологии</h3>
             <p class="features-text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
