--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
@@ -14,22 +14,32 @@
   <body class="page">
     <header>
       <nav>
-        <a href="" class="logo"> <span class="accent">Web</span>Studio </a>
+        <a href="" class="logo link"> <span class="accent">Web</span>Studio </a>
         <ul class="site-nav list">
-          <li><a class="link current" href="">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+          <li><a class="link current link" href="">Студия</a></li>
+          <li>
+            <a class="link" href="./portfolio.html">Портфолио</a>
+          </li>
+          <li><a class="link" href="">Контакты</a></li>
         </ul>
       </nav>
       <ul class="auth-nav list">
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li>
+          <a class="link current" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a class="link nav-header" href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
+        </li>
       </ul>
     </header>
     <main>
       <section class="hero">
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+        <button class="hero-button" type="button">Заказать услугу</button>
       </section>
       <section>
         <h2></h2>
@@ -65,8 +75,8 @@
         </ul>
       </section>
       <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
+        <h2 class="about">Чем мы занимаемся</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/img1.jpg"
@@ -94,9 +104,9 @@
         </ul>
       </section>
       <section>
-        <h2>Наша команда</h2>
+        <h2 class="team">Наша команда</h2>
 
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/team1.jpg"
@@ -104,8 +114,8 @@
               width="270"
               height="260"
             />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <h3 class="team-title">Игорь Демьяненко</h3>
+            <p class="team-text">Product Designer</p>
           </li>
           <li>
             <img
@@ -114,8 +124,8 @@
               width="270"
               height="260"
             />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-title">Ольга Репина</h3>
+            <p class="team-text">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -124,8 +134,8 @@
               width="270"
               height="260"
             />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="team-title">Николай Тарасов</h3>
+            <p class="team-text">Marketing</p>
           </li>
           <li>
             <img
@@ -134,18 +144,21 @@
               width="270"
               height="260"
             />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <h3 class="team-title">Михаил Ермаков</h3>
+            <p class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
-      <a href=""> WebStudio</a>
+      <a href="" class="footer-logo link">
+        <span class="footer-accent">Web</span>Studio
+      </a>
       <address>
-        <ul>
+        <ul class="footer-list">
           <li>
             <a
+              class="current link info-footer"
               href="https://goo.gl/maps/jRYS7xwpVxC2w3iY8"
               target="_blank"
               rel="nooppener noreferrer"
@@ -153,8 +166,16 @@
               г. Киев, пр-т Леси Украинки, 26
             </a>
           </li>
-          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
-          <li><a href="mailto:info@example.com">info@example.com </a></li>
+          <li>
+            <a class="info-footer link" href="tel:+380991111111"
+              >+38 099 111 11 11</a
+            >
+          </li>
+          <li>
+            <a class="info-footer link" href="mailto:info@example.com"
+              >info@example.com
+            </a>
+          </li>
         </ul>
       </address>
     </footer>
