--- a/portfolio.html
+++ b/portfolio.html
@@ -5,43 +5,63 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    "
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="page">
     <header>
       <nav>
-        <a href="" class="logo"> <span class="accent">Web</span>Studio </a>
+        <a href="" class="logo link"> <span class="accent">Web</span>Studio </a>
         <ul class="site-nav list">
-          <li><a href="./index.html">Студия</a></li>
-          <li><a class="link current" href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+          <li><a class="link" href="./index.html">Студия</a></li>
+          <li><a class="link current link" href="">Портфолио</a></li>
+          <li><a class="link" href="">Контакты</a></li>
         </ul>
       </nav>
       <ul class="auth-nav list">
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li>
+          <a class="link nav-header" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a a class="link nav-header" href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
+        </li>
       </ul>
     </header>
     <main>
       <section>
         <h1></h1>
-        <ul>
-          <li><button type="button">Все</button></li>
-          <li><button type="button">Веб-сайты</button></li>
-          <li><button type="button">Приложения</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
+        <ul class="list">
+          <li>
+            <button class="button-secondary button" type="button">Все</button>
+          </li>
+          <li>
+            <button class="button-primary button" type="button">
+              Веб-сайты
+            </button>
+          </li>
+          <li>
+            <button class="button-primary button" type="button">
+              Приложения
+            </button>
+          </li>
+          <li>
+            <button class="button-primary button" type="button">Дизайн</button>
+          </li>
+          <li>
+            <button class="button-primary button" type="button">
+              Маркетинг
+            </button>
+          </li>
         </ul>
 
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/portfolio1.jpg"
@@ -49,8 +69,8 @@
               width="370"
               height="294"
             />
-            <h3>Технокряк</h3>
-            <p>Веб-сайт</p>
+            <h3 class="items-title">Технокряк</h3>
+            <p class="items-text">Веб-сайт</p>
           </li>
           <li>
             <img
@@ -59,8 +79,10 @@
               width="370"
               height="294"
             />
-            <h3>Постер <span lang="en">New Orlean vs Golden Star</span></h3>
-            <p>Дизайн</p>
+            <h3 class="items-title">
+              Постер <span lang="en">New Orlean vs Golden Star</span>
+            </h3>
+            <p class="items-text">Дизайн</p>
           </li>
           <li>
             <img
@@ -69,8 +91,8 @@
               width="370"
               height="294"
             />
-            <h3>Ресторан <span lang="en">Seafood</span></h3>
-            <p>Приложение</p>
+            <h3 class="items-title">Ресторан <span lang="en">Seafood</span></h3>
+            <p class="items-text">Приложение</p>
           </li>
           <li>
             <img
@@ -79,8 +101,8 @@
               width="370"
               height="294"
             />
-            <h3>Проект <span lang="en">Prime</span></h3>
-            <p>Маркетинг</p>
+            <h3 class="items-title">Проект <span lang="en">Prime</span></h3>
+            <p class="items-text">Маркетинг</p>
           </li>
           <li>
             <img
@@ -89,8 +111,8 @@
               width="370"
               height="294"
             />
-            <h3>Проект <span lang="en">Boxes</span></h3>
-            <p>Приложение</p>
+            <h3 class="items-title">Проект <span lang="en">Boxes</span></h3>
+            <p class="items-text">Приложение</p>
           </li>
           <li>
             <img
@@ -99,8 +121,8 @@
               width="370"
               height="294"
             />
-            <h3 lang="en">Inspiration has no Borders</h3>
-            <p>Веб-сайт</p>
+            <h3 class="items-title" lang="en">Inspiration has no Borders</h3>
+            <p class="items-text">Веб-сайт</p>
           </li>
           <li>
             <img
@@ -109,8 +131,10 @@
               width="370"
               height="294"
             />
-            <h3>Издание <span lang="en">Limited Edition</span></h3>
-            <p>Дизайн</p>
+            <h3 class="items-title">
+              Издание <span lang="en">Limited Edition</span>
+            </h3>
+            <p class="items-text">Дизайн</p>
           </li>
           <li>
             <img
@@ -119,8 +143,8 @@
               width="370"
               height="294"
             />
-            <h3>Проект LAB</h3>
-            <p>Маркетинг</p>
+            <h3 class="items-title">Проект LAB</h3>
+            <p class="items-text">Маркетинг</p>
           </li>
           <li>
             <img
@@ -129,18 +153,21 @@
               width="370"
               height="294"
             />
-            <h3 lang="en">Growing Business</h3>
-            <p>Приложение</p>
+            <h3 class="items-title" lang="en">Growing Business</h3>
+            <p class="items-text">Приложение</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
-      <a href=""> WebStudio</a>
+      <a href="" class="footer-logo link">
+        <span class="footer-accent">Web</span>Studio
+      </a>
       <address>
-        <ul>
+        <ul class="footer-list">
           <li>
             <a
+              class="current link info-footer"
               href="https://goo.gl/maps/jRYS7xwpVxC2w3iY8"
               target="_blank"
               rel="nooppener noreferrer"
@@ -148,8 +175,16 @@
               г. Киев, пр-т Леси Украинки, 26
             </a>
           </li>
-          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
-          <li><a href="mailto:info@example.com">info@example.com </a></li>
+          <li>
+            <a class="info-footer link" href="tel:+380991111111"
+              >+38 099 111 11 11</a
+            >
+          </li>
+          <li>
+            <a class="info-footer link" href="mailto:info@example.com"
+              >info@example.com
+            </a>
+          </li>
         </ul>
       </address>
     </footer>
