--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
           >
         </li>
         <li>
-          <a a class="link nav-header" href="tel:+380961111111"
+          <a class="link nav-header" href="tel:+380961111111"
             >+38 096 111 11 11</a
           >
         </li>
