--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
     <header>
       <nav>
         <a href="" class="logo link"> <span class="accent">Web</span>Studio </a>
-        <ul class="site-nav list">
-          <li><a class="link current link" href="">Студия</a></li>
+        <ul class="sitenav-link list">
+          <li><a class="sitenav-link current link" href="">Студия</a></li>
           <li>
-            <a class="link" href="./portfolio.html">Портфолио</a>
+            <a class="sitenav-link link" href="./portfolio.html">Портфолио</a>
           </li>
-          <li><a class="link" href="">Контакты</a></li>
+          <li><a class="sitenav-link link" href="">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="auth-nav list">
+      <ul class="list">
         <li>
-          <a class="link current" href="mailto:info@devstudio.com"
+          <a class="link authnav-link" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
         <li>
-          <a class="link nav-header" href="tel:+380961111111"
+          <a class="authnav-link link" href="tel:+380961111111"
             >+38 096 111 11 11</a
           >
         </li>
@@ -158,7 +158,7 @@
         <ul class="footer-list">
           <li>
             <a
-              class="current link info-footer"
+              class="infofooter-link link"
               href="https://goo.gl/maps/jRYS7xwpVxC2w3iY8"
               target="_blank"
               rel="nooppener noreferrer"
@@ -167,12 +167,12 @@
             </a>
           </li>
           <li>
-            <a class="info-footer link" href="tel:+380991111111"
+            <a class="infofooter-link link" href="tel:+380991111111"
               >+38 099 111 11 11</a
             >
           </li>
           <li>
-            <a class="info-footer link" href="mailto:info@example.com"
+            <a class="infofooter-link link" href="mailto:info@example.com"
               >info@example.com
             </a>
           </li>
