--- a/portfolio.html
+++ b/portfolio.html
@@ -15,20 +15,20 @@
     <header>
       <nav>
         <a href="" class="logo link"> <span class="accent">Web</span>Studio </a>
-        <ul class="site-nav list">
-          <li><a class="link" href="./index.html">Студия</a></li>
-          <li><a class="link current link" href="">Портфолио</a></li>
-          <li><a class="link" href="">Контакты</a></li>
+        <ul class="sitenav-link list">
+          <li><a class="sitenav-link link" href="./index.html">Студия</a></li>
+          <li><a class="sitenav-link current link" href="">Портфолио</a></li>
+          <li><a class="sitenav-link link" href="">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="auth-nav list">
+      <ul class="list">
         <li>
-          <a class="link nav-header" href="mailto:info@devstudio.com"
+          <a class="link authnav-link" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
         <li>
-          <a class="link nav-header" href="tel:+380961111111"
+          <a class="authnav-link link" href="tel:+380961111111"
             >+38 096 111 11 11</a
           >
         </li>
@@ -36,28 +36,22 @@
     </header>
     <main>
       <section>
-        <h1></h1>
+        <h1><!-- Portfolio --></h1>
         <ul class="list">
           <li>
-            <button class="button-secondary button" type="button">Все</button>
+            <button class="button-primary" type="button">Все</button>
           </li>
           <li>
-            <button class="button-primary button" type="button">
-              Веб-сайты
-            </button>
+            <button class="button-primary" type="button">Веб-сайты</button>
           </li>
           <li>
-            <button class="button-primary button" type="button">
-              Приложения
-            </button>
+            <button class="button-primary" type="button">Приложения</button>
           </li>
           <li>
-            <button class="button-primary button" type="button">Дизайн</button>
+            <button class="button-primary" type="button">Дизайн</button>
           </li>
           <li>
-            <button class="button-primary button" type="button">
-              Маркетинг
-            </button>
+            <button class="button-primary" type="button">Маркетинг</button>
           </li>
         </ul>
 
@@ -69,7 +63,7 @@
               width="370"
               height="294"
             />
-            <h3 class="items-title">Технокряк</h3>
+            <h2 class="items-title">Технокряк</h2>
             <p class="items-text">Веб-сайт</p>
           </li>
           <li>
@@ -79,9 +73,9 @@
               width="370"
               height="294"
             />
-            <h3 class="items-title">
+            <h2 class="items-title">
               Постер <span lang="en">New Orlean vs Golden Star</span>
-            </h3>
+            </h2>
             <p class="items-text">Дизайн</p>
           </li>
           <li>
@@ -91,7 +85,7 @@
               width="370"
               height="294"
             />
-            <h3 class="items-title">Ресторан <span lang="en">Seafood</span></h3>
+            <h2 class="items-title">Ресторан <span lang="en">Seafood</span></h2>
             <p class="items-text">Приложение</p>
           </li>
           <li>
@@ -101,7 +95,7 @@
               width="370"
               height="294"
             />
-            <h3 class="items-title">Проект <span lang="en">Prime</span></h3>
+            <h2 class="items-title">Проект <span lang="en">Prime</span></h2>
             <p class="items-text">Маркетинг</p>
           </li>
           <li>
@@ -111,7 +105,7 @@
               width="370"
               height="294"
             />
-            <h3 class="items-title">Проект <span lang="en">Boxes</span></h3>
+            <h2 class="items-title">Проект <span lang="en">Boxes</span></h2>
             <p class="items-text">Приложение</p>
           </li>
           <li>
@@ -121,7 +115,7 @@
               width="370"
               height="294"
             />
-            <h3 class="items-title" lang="en">Inspiration has no Borders</h3>
+            <h2 class="items-title" lang="en">Inspiration has no Borders</h2>
             <p class="items-text">Веб-сайт</p>
           </li>
           <li>
@@ -131,9 +125,9 @@
               width="370"
               height="294"
             />
-            <h3 class="items-title">
+            <h2 class="items-title">
               Издание <span lang="en">Limited Edition</span>
-            </h3>
+            </h2>
             <p class="items-text">Дизайн</p>
           </li>
           <li>
@@ -143,7 +137,7 @@
               width="370"
               height="294"
             />
-            <h3 class="items-title">Проект LAB</h3>
+            <h2 class="items-title">Проект LAB</h2>
             <p class="items-text">Маркетинг</p>
           </li>
           <li>
@@ -153,7 +147,7 @@
               width="370"
               height="294"
             />
-            <h3 class="items-title" lang="en">Growing Business</h3>
+            <h2 class="items-title" lang="en">Growing Business</h2>
             <p class="items-text">Приложение</p>
           </li>
         </ul>
@@ -167,7 +161,7 @@
         <ul class="footer-list">
           <li>
             <a
-              class="current link info-footer"
+              class="infofooter-link link"
               href="https://goo.gl/maps/jRYS7xwpVxC2w3iY8"
               target="_blank"
               rel="nooppener noreferrer"
@@ -176,12 +170,12 @@
             </a>
           </li>
           <li>
-            <a class="info-footer link" href="tel:+380991111111"
+            <a class="infofooter-link link" href="tel:+380991111111"
               >+38 099 111 11 11</a
             >
           </li>
           <li>
-            <a class="info-footer link" href="mailto:info@example.com"
+            <a class="infofooter-link link" href="mailto:info@example.com"
               >info@example.com
             </a>
           </li>
