--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="team-background">
         <h2 class="team">Наша команда</h2>
 
         <ul class="list">
